--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
 :root {
-  font-family: 'Kumbh Sans', sans-serif;
   color: aliceblue;
 
   --dark-cyan: hsl(185, 75%, 39%);
@@ -9,59 +8,95 @@
   --dark-grayish-blue: hsl(227, 10%, 46%);
   --dark-gray: hsl(0, 0%, 59%);
 
-  background: url(./assets/images/bg-pattern-top.svg), url(./assets/images/bg-pattern-bottom.svg);
-  background-position: right 52vw bottom 35vh, left 48vw top 52vh;
-  background-repeat: no-repeat, no-repeat;
-  background-color: var(--dark-cyan);
 }
-
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  font-family: 'Kumbh Sans', sans-serif;
+  background-color: hsl(185, 75%, 39%);
+  background-image: url(./assets/images/bg-pattern-top.svg),
+    url(./assets/images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat, no-repeat;
+  background-position: right 76vh bottom 53vh, left 75vh top 49vh;
+}
 
 .container { 
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 375px;
-  margin: 100px auto;
-  background: hsl(0, 0%, 100%);
-  width: 350px;
-  border-radius: 15px;
-}
-
-.cover__photo-box { 
-  width: 100%;
-}
-.cover-img { 
-  position: relative;
-  width: 100%;
-  border-radius: 15px 15px 0 0;
-}
-
-.profile-photo { 
-  margin-bottom: 2rem;
-}
-.profile-img { 
-  position: absolute;
-  border-radius: 50%;
-  left: 46%;
-  bottom: 65%;
-  border: 5px solid white;
-}
-
-.profile-info { 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0 1rem;
-  color: var(--very-dark-desaturated-blue);
-}
-.profile-info h1 { 
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin-right: 1rem;
+  margin: 0 auto;
   text-align: center;
+}
+
+.wrapper { 
+  max-width: 350px;
+  background-color: white;
+  border-radius: 15px;
+  overflow: hidden;
+  margin: 1rem;
+}
+
+.contents img { 
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 4px solid whitesmoke;
+  margin-top: -62px;
+  margin-bottom: 14px;
+}
+.contents h2 { 
+  font-size: 18px;
+  font-weight: 700;
+  color: #272938;
+  margin-bottom: 10px;
+}
+.contents h2 span { 
+  margin-left: 11px;
+  color: #686a74;
+  font-weight: 400;
+}
+.contents p {
+  font-size: 14px;
+  font-weight: 400;
+  color: #686a74;
+  margin-bottom: 25px;
+}
+
+.content { 
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid #e6e6e6;
+  padding: 22px 50px 0px;
+}
+.content h1.stats { 
+  font-size: 18px;
+  font-weight: 700;
+  color: #272938;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+.content p { 
+  font-size: 12px;
+  font-weight: 400;
+  color: #686a74;
+  letter-spacing: 1.2px;
+}
+
+.attribution { 
+  font-size: 11px;
+  font-weight: 400;
+  color: #050505;
+}
+.attribution a { 
+  color: #f4f4f7;
+}
+
+@media screen and (max-width: 430px) {
+  .attribution { 
+    display: none;
+  }
 }
